fix headings and contrast

--- a/source/sass/buyers-guide/views/product.scss
+++ b/source/sass/buyers-guide/views/product.scss
@@ -53,7 +53,7 @@ $pni-product-breakpoint-larger: $bp-md;
   .small-link {
     font-size: 18px;
     font-weight: 400;
-    color: $gray-40;
+    color: $gray-60;
   }
 
   button.small-link {
